* Do not use the -v option when extracting or testing ZIP archives
  with unzip, since -v lists files instead of printing verbose output.
  Closes: GH bug #49
* Use the -sae option for 7z to use the provided archive name.
  Closes: GH bug #72
* Add error message about temporary directory when extraction fails.
  Closes: GH bug #57
* Removed the recompress command.


1.15.0 (released 28.10.2023)

* Added support for LZ4 archives with the lz4 tool.
  Closes: GH bug #46
* Use correct registry key flag for 32-bit Python on 64-bit Windows
  when detecting 7z.
  Closes: GH bug #35
* Fix configuration for listing .bz2 and .bz3 archives.
* Added support for the unar program which can extract a lot of
  archive formats, for example ZIP, RAR, 7Z, TAR, GZIP, BZIP2 etc.
  Closes: GH bug #39
* Document how to enable bash completion.
  Closes: GH bug #127


1.14.1 (released 26.10.2023)

* Fix wrong option in bzip3, and add tests.
  Closes: GH bug #134
* Create non-existing directories when using the --outdir option
  with patool extract.
  Closes: GH bug #117, #132
* Ensure log output does not have a UnicodeEncodeError
  Closes: GH bug #122, #121, #52, #29
* Don't open new console windows for subprocesses on Windows.
  Closes: GH bug #85
* Use 7z to extract, list and test CHM (.chm) archives.
  Closes: GH bug #78


1.14.0 (released 25.10.2023)

* Test if tar supports --force-local on macOS systems.
  Closes: GH bug #125
* Enable archive header encryption for 7z
  Thanks to Michael Serajnik for the initial patch.
  Closes: GH bug #102
* Added support for BZIP3 archives with the bzip3 tool.
  Closes: GH bug #129
* Fix Windows tar doesn't use --force-local
  Thanks to Jack Cherng for the patch.
* Include tests data in the source distribution.
  Thanks to Alfred Wingate for the patch.


1.13 (released 24.10.2023)

* Added support for ZSTANDARD archives with the zstd tool.
* Improved patool diff output: when two archives each have