@@ -15,6 +15,8 @@
 * Add error message about temporary directory when extraction fails.
   Closes: GH bug #57
 * Removed the recompress command.
+* Use the new filter option when extracting TAR archives with the tarfile
+  module in Python >= 3.12 to detect unsafe archive entries.
 
 
 1.15.0 (released 28.10.2023)
